<resources>
    <string name="app_name">QUIZHUNT ADMIN</string>
    <string name="admin_panel_string">Quiz Hunt Admin</string>
    <string name="nav_header_title">&lt;/&gt;</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_question">NEW QUESTION</string>

    <string name="question_field_hint">QUESTION</string>
    <string name="option_a_hint">OPTION A</string>
    <string name="option_b_hint">OPTION B</string>
    <string name="option_c_hint">OPTION C</string>
    <string name="option_d_hint">OPTION D</string>
    <string name="title_activity_show_all_questions">Q &amp; A</string>
    <string name="title_activity_edit_question">Edit Question</string>
    <string name="title_activity_delete_question">Delete</string>
    <string name="title_activity_manage_account">ManageAccountActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
