<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.teambhargavinilayam.abh.quizhuntadmin.EditQuestionActivity"
    tools:showIn="@layout/activity_edit_question">
    <EditText
        android:id="@+id/question_edit_field"
        android:layout_width="220dp"
        android:layout_height="115dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/question_field_hint"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/optionA_edit_field"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/option_a_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/question_edit_field"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_edit_field"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/question_edit_field" />

    <EditText
        android:id="@+id/optionB_edit_field"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_b_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/question_edit_field"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_edit_field"
        app:layout_constraintHorizontal_bias="0.125"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/optionA_edit_field" />

    <EditText
        android:id="@+id/optionC_edit_field"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_c_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/question_edit_field"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_edit_field"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/optionB_edit_field" />

    <EditText
        android:id="@+id/optionD_edit_field"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_d_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_edit_field"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/question_edit_field"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/optionC_edit_field" />

    <Spinner
        android:id="@+id/edit_right_option_list"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_edit_field"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/question_edit_field"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/optionD_edit_field"
        app:layout_constraintHorizontal_bias="0.562" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/updateQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@mipmap/ic_add_black_24dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/question_edit_field"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_edit_field"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_right_option_list"
        app:layout_constraintHorizontal_bias="0.467" />

</android.support.constraint.ConstraintLayout>
