<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="in.teambhargavinilayam.abh.quizhuntadmin.AddQuestionFragment">



    <EditText
        android:id="@+id/question_field"
        android:layout_width="215dp"
        android:layout_height="81dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/question_field_hint"
        android:textAlignment="center"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/q_no"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/optionA_field"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/option_a_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_field"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/question_field"
        app:layout_constraintHorizontal_bias="0.846"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/question_field" />

    <EditText
        android:id="@+id/optionB_field"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_b_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/question_field"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_field"
        app:layout_constraintHorizontal_bias="0.23"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/optionA_field" />

    <EditText
        android:id="@+id/optionC_field"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_c_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_field"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/question_field"
        app:layout_constraintHorizontal_bias="0.846"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/optionB_field" />

    <EditText
        android:id="@+id/optionD_field"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_d_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/question_field"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_field"
        app:layout_constraintHorizontal_bias="0.23"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/optionC_field" />

    <Spinner
        android:id="@+id/right_option_list"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_field"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/question_field"
        app:layout_constraintHorizontal_bias="0.846"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/optionD_field" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@mipmap/ic_add_black_24dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_field"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/question_field"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/right_option_list"
        app:layout_constraintHorizontal_bias="0.496" />

    <TextView
        android:id="@+id/q_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="15dp"
        android:textColor="#000"
        android:textAlignment="center"
        android:layout_marginLeft="76dp"
        app:layout_constraintLeft_toLeftOf="@+id/question_field"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/question_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />
</android.support.constraint.ConstraintLayout>
